--- a/main/res/drawable/cell_shape.xml
+++ b/main/res/drawable/cell_shape.xml
@@ -6,5 +6,5 @@
     <solid android:color="#FFFFFF"/>
     <stroke
         android:width="1dp"
-        android:color="@color/design_default_color_primary_dark"/>
+        android:color="#CCCBCB"/>
 </shape>
