--- a/main/res/layout/fragment_timetable.xml
+++ b/main/res/layout/fragment_timetable.xml
@@ -9,12 +9,12 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:orientation="horizontal"
-        android:background="#004E96">
+        android:background="@drawable/cell_shape">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="시간표"
-            android:textColor="#FFFFFF"
+            android:textColor="#000000"
             android:textSize="30dp"
             android:textStyle="bold"
             android:layout_gravity="center"
@@ -54,7 +54,7 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#004E96">
+            android:background="#FFFFFF">
             <TextView
                 android:text=""
                 android:autoSizeTextType="uniform"
@@ -69,8 +69,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
+                android:background="@drawable/cell_shape"
                 android:gravity="center"
-                android:textColor="#FFFFFF"
+                android:textColor="#000000"
+
                 android:textStyle="bold"/>
             <TextView
                 android:text="화"
@@ -80,7 +82,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:gravity="center"
-                android:textColor="#FFFFFF"
+                android:background="@drawable/cell_shape"
+                android:textColor="#000000"
                 android:textStyle="bold"/>
             <TextView
                 android:text="수"
@@ -89,8 +92,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
+                android:background="@drawable/cell_shape"
                 android:gravity="center"
-                android:textColor="#FFFFFF"
+                android:textColor="#000000"
                 android:textStyle="bold"/>
             <TextView
                 android:text="목"
@@ -100,7 +104,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:gravity="center"
-                android:textColor="#FFFFFF"
+                android:background="@drawable/cell_shape"
+                android:textColor="#000000"
                 android:textStyle="bold"/>
             <TextView
                 android:text="금"
@@ -110,22 +115,22 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:gravity="center"
-                android:textColor="#FFFFFF"
+                android:background="@drawable/cell_shape"
+                android:textColor="#000000"
                 android:textStyle="bold"/>
         </TableRow>
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#004E96">
+            android:background="#FFFFFF">
             <TextView
                 android:text="8"
                 android:textSize="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#004E96"
-                android:textColor="#FFFFFF"
+                android:background="@drawable/cell_shape"
                 android:textStyle="bold"
                 android:gravity="right"/>
             <TextView
@@ -193,15 +198,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#004E96">
+            android:background="#FFFFFF">
             <TextView
                 android:text="9"
                 android:textSize="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#004E96"
-                android:textColor="#FFFFFF"
+                android:background="@drawable/cell_shape"
                 android:textStyle="bold"
                 android:gravity="right"/>
             <TextView
@@ -269,16 +273,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#004E96">
+            android:background="#FFFFFF">
             <TextView
                 android:text="10"
                 android:textSize="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#004E96"
-                android:textColor="#FFFFFF"
                 android:textStyle="bold"
+                android:background="@drawable/cell_shape"
                 android:gravity="right"/>
             <TextView
                 android:text="월"
@@ -345,15 +348,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#004E96">
+            android:background="#FFFFFF">
             <TextView
                 android:text="11"
                 android:textSize="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#004E96"
-                android:textColor="#FFFFFF"
+                android:background="@drawable/cell_shape"
                 android:textStyle="bold"
                 android:gravity="right"/>
             <TextView
@@ -421,15 +423,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#004E96">
+            android:background="#FFFFFF">
             <TextView
                 android:text="12"
                 android:textSize="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#004E96"
-                android:textColor="#FFFFFF"
+                android:background="@drawable/cell_shape"
                 android:textStyle="bold"
                 android:gravity="right"/>
             <TextView
@@ -497,15 +498,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#004E96">
+            android:background="#FFFFFF">
             <TextView
                 android:text="13"
                 android:textSize="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#004E96"
-                android:textColor="#FFFFFF"
+                android:background="@drawable/cell_shape"
                 android:textStyle="bold"
                 android:gravity="right"/>
             <TextView
@@ -573,15 +573,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#004E96">
+            android:background="#FFFFFF">
             <TextView
                 android:text="14"
                 android:textSize="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#004E96"
-                android:textColor="#FFFFFF"
+                android:background="@drawable/cell_shape"
                 android:textStyle="bold"
                 android:gravity="right"/>
             <TextView
@@ -649,15 +648,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#004E96">
+            android:background="#FFFFFF">
             <TextView
                 android:text="15"
                 android:textSize="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#004E96"
-                android:textColor="#FFFFFF"
+                android:background="@drawable/cell_shape"
                 android:textStyle="bold"
                 android:gravity="right"/>
             <TextView
@@ -725,15 +723,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#004E96">
+            android:background="#FFFFFF">
             <TextView
                 android:text="16"
                 android:textSize="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#004E96"
-                android:textColor="#FFFFFF"
+                android:background="@drawable/cell_shape"
                 android:textStyle="bold"
                 android:gravity="right"/>
             <TextView
@@ -801,15 +798,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#004E96">
+            android:background="#FFFFFF">
             <TextView
                 android:text="17"
                 android:textSize="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#004E96"
-                android:textColor="#FFFFFF"
+                android:background="@drawable/cell_shape"
                 android:textStyle="bold"
                 android:gravity="right"/>
             <TextView
@@ -877,15 +873,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#004E96">
+            android:background="#FFFFFF">
             <TextView
                 android:text="18"
                 android:textSize="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#004E96"
-                android:textColor="#FFFFFF"
+                android:background="@drawable/cell_shape"
                 android:textStyle="bold"
                 android:gravity="right"/>
             <TextView
