--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".activities.MainActivity">
+
+    <!--데이터 로드용 웹뷰-->
+    <WebView
+        android:id="@+id/dataWebView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        />
+
     <!--버튼 클릭하면 linearlayout사라지고 버튼 누르면 relativelyout로 넘어감-->
     <FrameLayout
         android:id="@+id/nav_host_fragment"
