--- a/app/src/main/res/layout/fragment_qr.xml
+++ b/app/src/main/res/layout/fragment_qr.xml
@@ -76,10 +76,10 @@
             android:textSize="20dp"/>
     </LinearLayout>
 
-    <WebView
-        android:id="@+id/wv_qr"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/qrCode"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_gravity="center"
         android:layout_marginTop="80dp"/>
 
